# chan_openbsc

./: Makefile.am  README  README.md  bsc.c  bsc.h  channel.c  channel.h  config.c  config.h  mncc.c  mncc.h
patch/libosmo-abis/: 0001-chan_openbsc.patch
patch/libosmocore/: 0001-chan_openbsc.patch
patch/openbsc/: 0001-chan_openbsc.patch
